[TEX] Finish pass over the paper [no ci]

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -699,3 +699,19 @@
                   Jos{\'e} Miguel},
   year =         2023
 }
+
+@InProceedings{botev2017practical,
+  title =        {Practical {G}auss-{N}ewton Optimisation for Deep Learning},
+  author =       {Aleksandar Botev and Hippolyt Ritter and David Barber},
+  booktitle =    {International Conference on Machine Learning (ICML)},
+  year =         2017,
+}
+
+@article{micikevicius2017mixed,
+  title =        {Mixed precision training},
+  author =       {Micikevicius, Paulius and Narang, Sharan and Alben, Jonah and
+                  Diamos, Gregory and Elsen, Erich and Garcia, David and
+                  Ginsburg, Boris and Houston, Michael and Kuchaiev, Oleksii and
+                  Venkatesh, Ganesh and others},
+  year =         2017
+}
