--- a/paper/sections/background_pinns.tex
+++ b/paper/sections/background_pinns.tex
@@ -22,7 +22,7 @@ Let us consider a domain $\Omega\subseteq\mathbb R^d$ and the partial differenti
   u = g \quad \text{on }\partial\Omega\,,
 \end{align*}
 with square-integrable right hand side $f\in L^2(\Omega)$ and twice continuously differentiable boundary condition $g\in C^2(\Omega)\cap C(\overline{\Omega})$.
-$\mathcal{L}$ denotes a differential operator, e.g.\,the Laplacian $\mathcal{L} u = \Delta u = \sum_{i=1}^d \partial_{\evx_i}^2 u$.
+$\mathcal{L}$ denotes a differential operator, e.g.\,the Laplacian $\mathcal{L} u = \Delta_{\vx} u = \sum_{i=1}^d \partial_{\evx_i}^2 u$.
 We parametrize $u$ using a neural network and train its parameters $\vtheta$ to minimize the loss
 \begin{align}\label{eq:pinn-loss}
   \!\!\!\!\!\!
