Update on Overleaf.

--- a/paper/sections/contribution.tex
+++ b/paper/sections/contribution.tex
@@ -90,7 +90,7 @@ Let's consider the Poisson equation's interior Gramian block for a linear layer 
   =
   \nicefrac{1}{N}
   \textstyle
-  \sum_{n=1}^{N_\Omega}
+  \sum_{n=1}^{N}
   \left(
   \jac_{\mW^{(l)}} \Delta_\vx u_n  \right)^\top
   \jac_{\mW^{(l)}} \Delta_\vx u_n\,.
