[TEX] Add tutorial on Taylor-mode with consistent notation [no ci]

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -715,3 +715,12 @@
                   Venkatesh, Ganesh and others},
   year =         2017
 }
+
+@article{johnson2021taylor-made,
+  title =        {Taylor-made higher-order automatic differentiation},
+  author =       {Johnson, Matthew J and Bettencourt, Jesse and Maclaurin,
+                  Dougal and Duvenaud, David},
+  year =         2021,
+  url =          {https://github.com/google/jax/files/6717197/jet.pdf},
+  note =         {Accessed January 03, 2024}
+}
