--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -33,25 +33,20 @@
 \input{sections/pseudocode_poisson.tex}
 \clearpage
 
+\section{Taylor-Mode Automatic Differentiation \& Forward Laplacian}\label{app:taylor-mode-tutorial}
+\input{sections/taylor_mode_forward_laplacian.tex}
+
 %\section{Derivation of KFAC general PDEs}\label{app:generalPDEs}
 %\input{paper/sections/general_PDEs}
 
 \section{Detailed Derivation of the KFAC Approximation}\label{app:derivations}
 \input{sections/kfacs}
 
-
 %\section{Example: Laplacian for a Shallow Network}
 %\input{sections/laplacian_shallow_net.tex}
 
-%\section{Heat Equation}\label{sec:heat_equation}
-%\input{sections/heat_equation.tex}
-
-%\section{Taylor-Mode Automatic Differentiation \& Forward Laplacian}
-%\input{sections/taylor_mode_forward_laplacian.tex}
-
 %\section{Backpropagation Perspective of the Laplacian}
 %\input{sections/backpropagation_perspective.tex}
-
 
 %%% Local Variables:
 %%% mode: latex
