--- a/paper/sections/contribution.tex
+++ b/paper/sections/contribution.tex
@@ -8,7 +8,7 @@ We use Taylor-mode automatic differentiation to express this computation of high
 
 \subsection{Higher-order Forward Mode Automatic Differentiation as Weight Sharing}\label{sec:taylor-mode-AD}
 
-Here, we review higher-order forward mode, also known as \emph{Taylor-mode}, automatic differentiation~\citep{griewank1996algorithm, griewank2008evaluating, bettencourt2019taylor}.
+Here, we review higher-order forward mode, also known as \emph{Taylor-mode}, automatic differentiation~\citep[][tutorial in \Cref{app:taylor-mode-tutorial}]{griewank1996algorithm, griewank2008evaluating, bettencourt2019taylor}.
 Many PDEs only incorporate first- and second-order partial derivatives and we focus our discussion on second-order Taylor-mode for MLPs to keep the presentation light.
 However, one can treat higher-order PDEs and arbitrary network architectures completely analogously.
 
